cabal-version: 2.2
name:          cabal-testsuite
version:       3
copyright:     2003-2024, Cabal Development Team (see AUTHORS file)
license:       BSD-3-Clause
license-file:  LICENSE
author:        Cabal Development Team <cabal-devel@haskell.org>
maintainer:    cabal-devel@haskell.org
homepage:      http://www.haskell.org/cabal/
bug-reports:   https://github.com/haskell/cabal/issues
synopsis:      Test suite for Cabal and cabal-install
description:
  This package defines a shared test suite for Cabal and cabal-install.
category:       Distribution
build-type:     Custom

extra-source-files:
  README.md

source-repository head
  type:     git
  location: https://github.com/haskell/cabal/
  subdir:   cabal-testsuite

common shared
  default-language: Haskell2010

  build-depends:
    , base >= 4.11 && < 4.22
    -- this needs to match the in-tree lib:Cabal version
    , Cabal ^>= 3.15.0.0

  ghc-options:
    -Wall
    -fwarn-tabs
    -fwarn-incomplete-uni-patterns
    -fno-warn-unticked-promoted-constructors


library
  import: shared

  hs-source-dirs: src
  exposed-modules:
    Test.Cabal.CheckArMetadata
    Test.Cabal.DecodeShowBuildInfo
    Test.Cabal.Monad
    Test.Cabal.NeedleHaystack
    Test.Cabal.OutputNormalizer
    Test.Cabal.Plan
    Test.Cabal.Prelude
    Test.Cabal.Run
    Test.Cabal.Script
    Test.Cabal.Server
    Test.Cabal.TestCode
    Test.Cabal.Workdir

  other-modules:
    Test.Cabal.ScriptEnv0
  autogen-modules:
    Test.Cabal.ScriptEnv0

  build-depends:
    , Cabal-tests
    , aeson                 ^>= 1.4.2.0 || ^>=1.5.0.0 || ^>= 2.0.0.0 || ^>= 2.1.0.0 || ^>= 2.2.1.0
    , async                 ^>= 2.2.1
    , base16-bytestring     ^>= 0.1.1.5 || ^>= 1.0
    , bytestring            ^>= 0.10.0.2 || ^>= 0.11.0.0 || ^>= 0.12.0.0
    , containers            ^>= 0.5.0.0 || ^>= 0.6.0.1 || ^>= 0.7
    , cryptohash-sha256     ^>= 0.11.101.0
    , directory             ^>= 1.2.0.1 || ^>= 1.3.0.0
    , exceptions            ^>= 0.10.0
    , filepath              ^>= 1.3.0.1 || ^>= 1.4.0.0 || ^>= 1.5.0.0
    , Glob                  ^>= 0.10.2
    , network-uri            >= 2.6.0.2 && < 2.7
    , network-wait          ^>= 0.1.2.0 || ^>= 0.2.0.0
    , optparse-applicative  ^>= 0.14.3.0 || ^>=0.15.1.0 || ^>=0.16.0.0 || ^>= 0.17.0.0 || ^>= 0.18.1.0
    , process               ^>= 1.2.1.0 || ^>= 1.4.2.0 || ^>= 1.6.1.0
    , regex-base            ^>= 0.94.0.1
    , regex-tdfa            ^>= 1.2.3.1 || ^>=1.3.1.0
    , retry                 ^>= 0.9.1.0
    , array                 ^>= 0.4.0.1 || ^>= 0.5.0.0
    , text                  ^>= 1.2.3.1 || ^>= 2.0.1   || ^>= 2.1
    , transformers          ^>= 0.3.0.0 || ^>= 0.4.2.0 || ^>= 0.5.2.0 || ^>= 0.6.0.2

  if !os(windows)
    build-depends:
      , unix                ^>= 2.6.0.0 || ^>= 2.7.0.0 || ^>= 2.8.0.0
  else
    build-depends:
      , Win32

executable cabal-tests
  import: shared
  main-is: cabal-tests.hs
  hs-source-dirs: main
  ghc-options: -threaded -rtsopts
  -- Make sure these are built before the executable is run
  build-tool-depends: cabal-testsuite:test-runtime-deps
  build-depends:
    , cabal-testsuite
    -- constraints inherited via lib:cabal-testsuite component
    , async
    , filepath
    , optparse-applicative
    , process
    -- dependencies specific to exe:cabal-tests
    , clock                 ^>= 0.7.2 || ^>=0.8
    , directory
    , tasty
    , containers

  build-tool-depends: cabal-testsuite:setup
  default-extensions: TypeOperators

-- this executable is needed by lib:cabal-testsuite
executable setup
  import: shared
  main-is: Setup.simple.hs

-- This executable component is used to describe the runtime dependencies of
-- the tests. The Main.hs file and resulting executable are not useful in any way.

-- Ideally this would be an empty library, but because build-type: Custom, we can't
-- have sublibraries.

-- If you require an external dependency for a test it must be listed here.
executable test-runtime-deps
  default-language: Haskell2010
  -- Apart from base that is a compile-time dependency, the rest are runtime dependencies
  build-depends:
    , Cabal
    , Cabal-syntax
    , Cabal-hooks
    , base
    , bytestring
    , cabal-testsuite
    , containers
    , directory
    , exceptions
    , filepath
    , process
    , time
    , transformers
  main-is: static/Main.hs
  if !os(windows)
    build-depends: unix
  else
    build-depends: Win32

custom-setup
  -- we only depend on even stable releases of lib:Cabal
  -- and must match the release used in validate.yml (see
  -- https://github.com/haskell/cabal/pull/10251)
  setup-depends: Cabal ^>= 3.12.1,
                 Cabal-syntax ^>= 3.12.1,
                 base, filepath, directory
