Name: cabal-upload
Version: 0.1
License: BSD4
License-File: ../LICENSE
Author: Bjorn Bringert
Maintainer: Bjorn Bringert
Copyright: 2007 Bjorn Bringert <bjorn@bringert.net>
Stability: Experimental
Category: Distribution
Build-depends: base, network, HTTP >= 1.0
Synopsis: Command-line tool for uploading packages to Hackage
Description:
  This is a command-line tool program for uploading packages to the Hackage package database.

Executable: cabal-upload
Main-Is: CabalUpload.hs
Hs-Source-Dirs: src
