cabal-version: 3.0
name:          cabal-validate
version:       1.0.0
copyright:     2024-2025, Cabal Development Team (see AUTHORS file)
license:       BSD-3-Clause
author:        Cabal Development Team <cabal-devel@haskell.org>
synopsis:      An internal tool for building and testing the Cabal package manager
build-type:    Simple

common common
    ghc-options: -Wall

    if impl(ghc <9.6)
        -- Pattern exhaustiveness checker is not as good, misses a case.
        ghc-options: -Wno-incomplete-patterns

    default-language: Haskell2010
    default-extensions:
        OverloadedStrings
        , TypeApplications

executable cabal-validate
    import: common
    ghc-options: -O -threaded -rtsopts -with-rtsopts=-N

    main-is: Main.hs
    hs-source-dirs: src

    other-modules:
        , ANSI
        , Cli
        , ClockUtil
        , OutputUtil
        , ProcessUtil
        , Step

    build-depends:
        , base >=4 && <5
        , bytestring >=0.11 && <1
        , containers >=0.6 && <1
        , directory >=1.0 && <2
        , filepath >=1 && <2
        , optparse-applicative >=0.18 && <1
        , terminal-size >=0.3 && <1
          -- https://github.com/haskell/cabal/pull/11280#issuecomment-3534506424
        , text >=1.2 && <3
        , time >=1 && <2
        , typed-process >=0.2 && <1
